--- a/.gitmodules
+++ b/.gitmodules
@@ -136,3 +136,6 @@
 [submodule "third_party/kineto"]
     path = third_party/kineto
     url = https://github.com/pytorch/kineto
+[submodule "third_party/universal"]
+	path = third_party/universal
+	url = https://github.com/stillwater-sc/universal.git
